# pocWebSockets

./: .env.base  .env.client  .env.dev  .env.local  .env.test  .gitignore  LICENSE  README.md  alembic.ini  client.py  pyproject.toml  server.py  websockets-docker-compose.yml  websockets.Dockerfile
migrations/: env.py
migrations/versions/: 0000_00_00_000000000000.py
resources/templates/: room.html.jinja
scripts/: clean.sh  pre-commit.sh  setup.sh
tdb/poc_websockets/client/: client.py  config.py
tdb/poc_websockets/server/: app.py  auth.py  config.py  database.py  logger.py  websocket.py
tdb/poc_websockets/server/models/: __init__.py  auth_token.py  user.py
tdb/poc_websockets/server/routes/: __init__.py  auth.py  room.py  status.py  websocket.py
tdb/poc_websockets/server/routes/v1/: user.py
